[package]
name = "bisky"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Bluesky API library"
homepage = "https://github.com/jesopo/bisky"
documentation = "https://docs.rs/bisky/"
repository = "https://github.com/jesopo/bisky"
readme = "README.md"

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["fs"] }
url = "2.3.1"
