[package]
name = "bisky"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Bluesky API library"
homepage = "https://github.com/jesopo/bisky"
documentation = "https://docs.rs/bisky/"
repository = "https://github.com/jesopo/bisky"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
ciborium = "0.2.0"
cid = { version = "0.10.1", features = ["serde-codec"] }
derive_builder = "0.12.0"
miette = "5.8.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.16", default-features = false, features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_bytes = "0.11.9"
serde_ipld_dagcbor = "0.3.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs"] }
