[package]
name = "make_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisky = { path = "../../" }
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
